--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -15,13 +15,14 @@ jobs:
     steps:
       - name: Install mysql client
         run: |
-          apt-get update \
-          && apt-get install -y mysql-client
+          sudo apt-get update \
+          && sudo apt-get install -y mysql-client
       - name: Verify MySQL connection
         run: |
           mysql \
-            --host 127.0.0.1 \
-            --user root \
+            --host=127.0.0.1 \
+            --user=root \
+            --password=password \
             --execute '\q'
 
   test-container:
@@ -43,6 +44,7 @@ jobs:
       - name: Verify MySQL connection
         run: |
           mysql \
-            --host mysql \
-            --user root \
+            --host=mysql \
+            --user=root \
+            --password=password \
             --execute '\q'
