--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       mysql:
-        image: mysql:8
+        image: percona/percona-xtradb-cluster:8.0
         env:
           MYSQL_ROOT_PASSWORD: password
         ports:
@@ -31,7 +31,7 @@ jobs:
     container: ubuntu:latest
     services:
       mysql:
-        image: mysql:8
+        image: percona/percona-xtradb-cluster:8.0
         env:
           MYSQL_ROOT_PASSWORD: password
         ports:
